--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vault-gke-helper"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
 
@@ -14,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
 url = "1.7.2"
+vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", rev = "ae5dd87b6319a2e616eae402f4b3fc63dbde0d24" }
