--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vault-gke-helper"
+name = "vault-k8s-helper"
 version = "0.2.0"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
