--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,21 @@
 [package]
-name = "vault-gke-helper"
+name = "vault-k8s-helper"
 version = "0.2.0"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
+aws_auth = { git = "https://github.com/lawliet89/aws-auth-payload", package = "aws-auth-payload", rev = "a760bfd02bca926a9d7e5c66ed5779939dc98b29" }
+base64 = "0.10.1"
 clap = "2.33.0"
 chrono = "0.4.6"
 env_logger = "0.6.1"
 failure = { version = "0.1.5", features=["backtrace"] }
 reqwest = "0.9.17"
+# rusoto_core = "0.39.0"
+rusoto_core = { git = "https://github.com/basisai/rusoto.git", rev = "c1965504b483d1b086844a28742778cc64467863" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
 url = "1.7.2"
-vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", rev = "ae5dd87b6319a2e616eae402f4b3fc63dbde0d24" }
+vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", rev = "34a6c73b900114fdfdbf0597c66f1e324e894012" }
