--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,18 @@
 [package]
 name = "vault-k8s-helper"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-# aws-auth-payload = "0.1.1"
-aws-auth-payload = { git = "https://github.com/lawliet89/aws-auth-payload.git", tag = "v0.2.0-beta0" }
+aws-auth-payload = "0.2.0"
 base64 = "0.11.0"
 clap = "2.33.0"
 chrono = "0.4.10"
 env_logger = "0.7.1"
 failure = { version = "0.1.6", features=["backtrace"] }
 reqwest = "0.10"
-# rusoto_core = "0.42.0"
-rusoto_core = { git = "https://github.com/rusoto/rusoto.git", tag = "rusoto-v0.43.0-beta.1" }
+rusoto_core = "0.43.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
