--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vault-k8s-helper"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
 
@@ -9,8 +9,10 @@ aws-auth-payload = "0.2.0"
 base64 = "0.13.0"
 clap = "2.33.3"
 chrono = "0.4.19"
+dirs = "3.0.1"
 env_logger = "0.8.1"
 failure = { version = "0.1.8", features=["backtrace"] }
+gcp_auth = "0.1.6"
 reqwest = "0.10"
 rusoto_core = "0.43.0"
 serde = { version = "1.0", features = ["derive"] }
