--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,14 @@ log = "0.4"
 url = "2.2"
 vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", tag = "v0.2.0" }
 tokio = { version = "0.2", features=["macros", "rt-threaded"] }
+
+# Add openssl-sys as a direct dependency so it can be cross compiled to
+# x86_64-unknown-linux-musl using the "vendored" feature below
+# cf. https://github.com/sfackler/rust-openssl/issues/980#issuecomment-415757400
+openssl-sys = "*"
+
+[features]
+# Force openssl-sys to staticly link in the openssl library. Necessary when
+# cross compiling to x86_64-unknown-linux-musl.
+# cf. https://github.com/sfackler/rust-openssl/issues/980#issuecomment-415757400
+vendored = ["openssl-sys/vendored"]
