--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,9 @@ jobs:
     strategy:
       matrix:
         target:
-          - aarch64-apple-darwin
+          # - aarch64-apple-darwin
           - aarch64-unknown-linux-gnu
-          - x86_64-apple-darwin
+          # - x86_64-apple-darwin
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
     runs-on: ubuntu-latest
