--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - "v*.*.*"
+  pull_request: {}
 
 jobs:
   release:
@@ -19,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Fix ring xcompile
+        run: sudo apt-get install -y musl-tools
       - name: Setup
         uses: actions-rs/toolchain@v1
         with:
