--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Fix ring xcompile
-        run: sudo apt-get install -y musl-tools
+      - name: Cross compile dependencies for ring crate
+        run: sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
       - name: Setup
         uses: actions-rs/toolchain@v1
         with:
