--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Cross compile dependencies for ring crate
-        run: sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
       - name: Setup
         uses: actions-rs/toolchain@v1
         with:
@@ -29,6 +27,11 @@ jobs:
           toolchain: stable
           target: ${{ matrix.target }}
           override: true
+      - name: Configure gcc
+        run: |
+          sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
+          echo '[target.aarch64-unknown-linux-gnu]' > ~/.cargo/config.toml
+          echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
       - name: Build
         uses: actions-rs/cargo@v1
         with:
