--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,12 @@ jobs:
           toolchain: stable
           target: ${{ matrix.target }}
           override: true
+      - name: Configure gcc
+        run: |
+          # Ref: https://github.com/napi-rs/node-rs/blob/main/.cargo/config.toml
+          sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
+          echo '[target.aarch64-unknown-linux-gnu]' > ~/.cargo/config.toml
+          echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
       - name: Build
         uses: actions-rs/cargo@v1
         with:
