--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
 name = "vault-k8s-helper"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-aws-auth-payload = "0.2.0"
-base64 = "0.13.0"
-clap = "2.33.3"
-chrono = "0.4.19"
-dirs = "3.0.1"
-env_logger = "0.9.0"
-failure = { version = "0.1.8", features=["backtrace"] }
-gcp_auth = "0.1.6"
+aws-auth-payload = "0.3"
+base64 = "0.13"
+clap = "2.33"
+chrono = "0.4"
+dirs = "4.0"
+env_logger = "0.9"
+failure = { version = "0.1", features=["backtrace"] }
+gcp_auth = "0.5"
 reqwest = "0.11"
-rusoto_core = "0.43.0"
+rusoto_core = "0.47"
+rusoto_credential = "0.47"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
 url = "2.2"
-vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", tag = "v0.2.0" }
-tokio = { version = "0.2", features=["macros", "rt-threaded"] }
+vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", tag = "v0.3.0" }
+tokio = { version = "1.0", features=["macros", "rt-multi-thread"] }
 
 # Add openssl-sys as a direct dependency so it can be cross compiled to
 # x86_64-unknown-linux-musl using the "vendored" feature below
