--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
           - name: Alpine (x86_64)
             os: ubuntu-latest
             target: x86_64-unknown-linux-musl
+          - name: Alpine (arm64)
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
           - name: Ubuntu (x86_64)
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
