--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,7 @@ jobs:
           sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
           echo '[target.aarch64-unknown-linux-gnu]' > ~/.cargo/config.toml
           echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
+          echo 'rustflags = ["-C", "target-feature=-crt-static"]' >> ~/.cargo/config.toml
       - name: Build
         uses: actions-rs/cargo@v1
         with:
